--- a/css/login.css
+++ b/css/login.css
@@ -4,8 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;    
+    }
+
+header{
+    text-align: center;
+    font-family: 'Moon Dance', cursive;
+    background-color: #a2aeaf;   
 }
 .container {
     display: flex;
@@ -176,13 +183,13 @@ input:-webkit-autofill
     border-bottom-left-radius: 0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    animation: slidein 1.3s; 
+    animation: slidein 1s; 
 
     z-index: 12;
 }
 
 .sign-up-js .content::before {
-    animation: slideout 1.3s; 
+    animation: slideout 1s; 
 
     z-index: 12;
 }
@@ -206,13 +213,13 @@ input:-webkit-autofill
 
     z-index: -1;
     position: relative;
-    animation: deslocamentoEsq 1.3s; 
+    animation: deslocamentoEsq 1s; 
 }
 
 .sign-up-js .second-content .second-column {
     position: relative;
     z-index: -1;
-    animation: deslocamentoDir 1.3s; 
+    animation: deslocamentoDir 1s; 
 }
 
 /*ANIMAÇÃOO CSS PARA O CONTEÚDO*/
