--- a/css/login.css
+++ b/css/login.css
@@ -14,6 +14,19 @@ header{
     font-family: 'Moon Dance', cursive;
     background-color: #a2aeaf;   
 }
+
+#logo{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    font-size: 28px;
+    min-width: 40px;
+    height: 40px;
+    font-weight: bold;
+    flex: 1;
+}
+
 .container {
     display: flex;
     justify-content: center;
