--- a/css/transacoes.css
+++ b/css/transacoes.css
@@ -59,11 +59,12 @@ header{
     height: 30px;
     padding: 3px;
 }
+
 .container {
     display: grid;
     grid-template-columns: 300px auto;
     background-color: #ecf0f1;
-    
+    overflow-y:auto;
 
 }
 
@@ -80,6 +81,7 @@ header{
 #perfil{
         margin-top: 5px;
         height: 250px;
+        border-radius: 70%;
         border: 0;
 }
 
@@ -95,9 +97,8 @@ header{
     border: 1px solid rgb(51, 50, 50);
     text-align: center;
 }
-
-#meusPosts{
-background-color: slategray;
+#transacoes{
+    background-color: slategray;
 }
 
 #logout{
@@ -110,26 +111,16 @@ background-color: slategray;
 }
 
 .content {
-    grid-column: 2/3;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    gap: 1em;
     height: calc(100vh - 46px);;
     overflow:auto;
-}
+    grid-column: 2/3;
 
-.post {
-    min-width: 300px;
-    height: 400px;
-    flex-basis: 1 ;
-    margin: 10px;
-    border: 1px solid rgb(71, 70, 70);
+
 }
 
 html, body, .container {
     min-height: 100vh;
-    
+    overflow-y:hidden;
 }
 
   
