--- a/css/home.css
+++ b/css/home.css
@@ -62,77 +62,34 @@ header{
 
 .container {
     display: grid;
-    grid-template-columns: 300px auto;
+    grid-template-columns: 260px auto;
     background-color: #ecf0f1;
+    overflow-y:auto;
 
 }
-
-.sidebar {
+.sidebar{
     grid-column: 1/2;
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    justify-content: flex-start;
+    justify-content: space-around;
+    gap: 1.5em;
     background-color: #a2aeaf;
-    border-right: 2px solid black;
+    
+    
 }
-
-#perfil{
-        margin-top: 5px;
-        height: 250px;
-        border-radius: 70%;
-        border: 0;
-}
-
-#imgPerfil{
-    min-width: 350x;
-    height: 250px;
-    border-radius: 40%;
-}
-
-.menu{
-    min-width: 298px;
-    height: 50px;    
-    border: 1px solid rgb(51, 50, 50);
-    text-align: center;
-}
-#alterarDados{
-    background-color: slategray;
-}
-
-#logout{
-    position: relative;
-    top: 10px;
-    text-align: left;
-    border: 0px;
-
+.sidebar > label{
+    font-size: 30px;
 
 }
 
-.content {
-    grid-column: 2/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    height: calc(100vh - 46px);;
-    overflow:auto;
-}
-
-.dados{
-    min-width: 200px;
-    height: 80px;
-}
-
-#url{
-    position: relative;
-    right: -146px;
+.sidebar > section{
+    flex: 1;
 }
 
 
 html, body, .container {
     min-height: 100vh;
+    overflow-y:hidden;
 }
 
   
