--- a/css/outrosUsuarios.css
+++ b/css/outrosUsuarios.css
@@ -5,7 +5,8 @@ body {
     margin-left: 0;
     margin-right: 0;
     height: 100%;
-    overflow: hidden;
+    
+    
 }
 
 header{
@@ -16,7 +17,7 @@ header{
     display: flex;
     justify-content: space-between;
     gap: 2em;
-    border-bottom: 2px solid black;     
+    border-bottom: 2px solid black;
 }
 
 #busca{
@@ -42,7 +43,7 @@ header{
     font-weight: bold;
     flex: 1;
     position: relative;
-    left: -30px;
+    left: -95px;
 
 }
 
@@ -59,26 +60,49 @@ header{
     height: 30px;
     padding: 3px;
 }
-.container {
+.container{
     display: grid;
-    grid-template-columns: 300px auto;
+    grid-template-rows: 200px auto;
     background-color: #ecf0f1;
 }
 
-.content {
+.perfil{
+    grid-row: 1/2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 10px;
+    border-bottom: 2px solid black;
+}
+
+#imgUsuario{
+    width: 150px;
+    height: 150px;
+    border:4px solid yellow;
+    border-radius: 100%;
+
+}
+.content{
+    grid-row: 2/3;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 1em;
+    
     
 }
 
 .post {
-    min-width: 300px;
-    height: 400px;
-    flex-basis: 1 ;
+    width: 300px;
+    min-height: 350px;
     margin: 10px;
+    flex-basis: 1 ;
     border: 1px solid rgb(71, 70, 70);
 }
 
+
 html, body, .container {
     min-height: 100vh;
+    
 }
-
-  
