--- a/css/pagamentos.css
+++ b/css/pagamentos.css
@@ -33,6 +33,7 @@ header{
     position: relative;
     top: 7px;
     left: -5px;
+    cursor: pointer;
 }
 
 #logo{
@@ -45,7 +46,7 @@ header{
     flex: 1;
     position: relative;
     left: -95px;
-
+    cursor: pointer;
 }
 
 #perfilCabecalho{
@@ -54,6 +55,7 @@ header{
     height: 38px;
     margin: 2px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 #miniPerfil{
@@ -275,7 +277,7 @@ body{
   color: #555555;
 }
 
-.btn{
+.btn-pagamento{
   margin-top: 40px;
   background: #2196F3;
   padding: 12px;
