--- a/css/adicionarPost.css
+++ b/css/adicionarPost.css
@@ -31,6 +31,7 @@ header{
     position: relative;
     top: 7px;
     left: -5px;
+    cursor: pointer;
 }
 
 #logo{
@@ -43,7 +44,7 @@ header{
     flex: 1;
     position: relative;
     left: -95px;
-
+    cursor: pointer;
 }
 
 #perfilCabecalho{
@@ -52,6 +53,7 @@ header{
     height: 38px;
     margin: 2px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 #miniPerfil{
@@ -96,17 +98,26 @@ header{
     border: 1px solid rgb(51, 50, 50);
     text-align: center;
 }
-#addPost{
+#adicionarPost{
     background-color: slategray;
 }
 
-#logout{
+#footerMenu{
     position: relative;
     top: 10px;
     text-align: left;
     border: 0px;
+}
 
+#btnLogout {
+    margin-left: 5px;
+    margin-top: 15px;
+    background-color: lightgrey;
+    border: 1px solid black;
+}
 
+#meusPosts, #adicionarPost, #historicoTransacoes, #alterarDados {
+    cursor: pointer;
 }
 
 .content {
