--- a/css/alterarDados.css
+++ b/css/alterarDados.css
@@ -31,6 +31,7 @@ header{
     position: relative;
     top: 7px;
     left: -5px;
+    cursor: pointer;
 }
 
 #logo{
@@ -43,7 +44,7 @@ header{
     flex: 1;
     position: relative;
     left: -95px;
-
+    cursor: pointer;
 }
 
 #perfilCabecalho{
@@ -52,6 +53,7 @@ header{
     height: 38px;
     margin: 2px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 #miniPerfil{
@@ -100,13 +102,22 @@ header{
     background-color: slategray;
 }
 
-#logout{
+#footerMenu{
     position: relative;
     top: 10px;
     text-align: left;
     border: 0px;
+}
 
+#btnLogout {
+    margin-left: 5px;
+    margin-top: 15px;
+    background-color: lightgrey;
+    border: 1px solid black;
+}
 
+#meusPosts, #adicionarPost, #historicoTransacoes, #alterarDados {
+    cursor: pointer;
 }
 
 .content {
