--- a/css/menuUsuario.css
+++ b/css/menuUsuario.css
@@ -31,6 +31,7 @@ header{
     position: relative;
     top: 7px;
     left: -5px;
+    cursor: pointer;
 }
 
 #logo{
@@ -43,7 +44,7 @@ header{
     flex: 1;
     position: relative;
     left: -95px;
-
+    cursor: pointer;
 }
 
 #perfilCabecalho{
@@ -52,6 +53,7 @@ header{
     height: 38px;
     margin: 2px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 #miniPerfil{
@@ -63,8 +65,6 @@ header{
     display: grid;
     grid-template-columns: 300px auto;
     background-color: #ecf0f1;
-    
-
 }
 
 .sidebar {
@@ -97,16 +97,25 @@ header{
 }
 
 #meusPosts{
-background-color: slategray;
+    background-color: slategray;
 }
 
-#logout{
+#footerMenu{
     position: relative;
     top: 10px;
     text-align: left;
     border: 0px;
+}
 
+#btnLogout {
+    margin-left: 5px;
+    margin-top: 15px;
+    background-color: lightgrey;
+    border: 1px solid black;
+}
 
+#meusPosts, #adicionarPost, #historicoTransacoes, #alterarDados {
+    cursor: pointer;
 }
 
 .content {
