--- a/css/alterarDados.css
+++ b/css/alterarDados.css
@@ -38,7 +38,7 @@ header{
     margin: 0;
     padding: 0;
     font-size: 28px;
-    min-width: 40px;
+    max-width: 300px;
     height: 40px;
     font-weight: bold;
     flex: 1;
