curtida/naocurtida e balaozinho arrumado

--- a/css/home.css
+++ b/css/home.css
@@ -143,6 +143,7 @@ header{
     height: 30px;
     position: relative;
     top: 3px;
+    cursor: pointer;
 }
 
 .pagamento > input{
@@ -171,8 +172,10 @@ header{
 .sctnComentario{
     position: relative;
     left: 20px;
-    /*visibility: hidden;*/
+}
 
+.hidden {
+    visibility: hidden;
 }
 
 #addComentario{
@@ -182,11 +185,13 @@ header{
 #comentar > #imgComentario{
     width: 20px;
     height: 20px;
+    cursor: pointer;
 }
 
 #comentar > #imgCurtida{
     width: 35px;
     height: 35px;
+    cursor: pointer;
 }
 
 #comentarios{
