--- a/css/home.css
+++ b/css/home.css
@@ -189,8 +189,22 @@ header{
 }
 
 #comentar > #imgCurtida{
-    width: 35px;
-    height: 35px;
+    cursor: pointer;
+}
+
+#comentar > .curtido{
+    width: 31px;
+    height: 31px;  
+    margin-left: 2px;  
+}
+
+#comentar > .naoCurtido{
+    width: 19px;
+    height: 19px;
+    margin: 9px; 
+}
+
+#btnComentar{
     cursor: pointer;
 }
 
