--- a/css/transacoes.css
+++ b/css/transacoes.css
@@ -113,9 +113,11 @@ header{
 
 #btnLogout {
     margin-left: 5px;
-    margin-top: 15px;
+    margin-top: 5px;
+    margin-bottom: 1px;
     background-color: lightgrey;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 #meusPosts, #adicionarPost, #historicoTransacoes, #alterarDados {
