--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
+:root {
+    --cor-do-cabecalho: #a2aeaf;
+    --cor-do-fundo: #a2aeaf;
+    --cor-da-letra: black;
+    --cor-fundo-container:#ecf0f1;
+    --cor-da-divisoria:black;
+    
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    :root {
+
+        --cor-do-cabecalho: rgb(7, 0, 36);
+        --cor-do-fundo: rgb(7, 0, 36);
+        --cor-da-letra: white;
+        --cor-fundo-container:#323333;
+        --cor-da-divisoria:white;
+    }
+}
+
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0px 0px 0px 0px;
@@ -12,17 +33,18 @@ body {
 header{
     text-align: center;
     font-family: 'Moon Dance', cursive;
-    background-color: #a2aeaf;
+    background-color: var(--cor-do-cabecalho);
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     gap: 2em;
-    border-bottom: 2px solid black;     
+    border-bottom: 2px solid var(--cor-da-divisoria);     
 }
 
 #busca{
     align-self: flex-end;
     margin-bottom: 10px;
+    color: var(--cor-da-letra);
 }
 
 #lupa{
@@ -46,10 +68,11 @@ header{
     position: relative;
     left: -95px;
     cursor: pointer;
+    color: var(--cor-da-letra);
 }
 
 #perfilCabecalho{
-    border: 1px solid rgb(41, 40, 40);
+    border: 1px solid var(--cor-da-divisoria);
     min-width: 38px;
     height: 38px;
     margin: 2px;
@@ -66,7 +89,7 @@ header{
 .container {
     display: grid;
     grid-template-columns: 265px auto;
-    background-color: #ecf0f1;
+    background-color: var(--cor-fundo-container);
      
 }
 
@@ -76,8 +99,8 @@ header{
     flex-direction: column;
     justify-content: flex-start;
     gap: 7.5em;
-    background-color: #a2aeaf;
-    border-right: 2px solid black; 
+    background-color: var(--cor-do-fundo);
+    border-right: 2px solid var(--cor-da-divisoria); 
 }
 
 .sidebar > label{
@@ -85,6 +108,7 @@ header{
     position: relative;
     right: -85px;
     margin-top: 20px;
+    color: var(--cor-da-letra);
 
 }
 
@@ -239,4 +263,3 @@ html, body, .container {
     
 }
 
-  
