--- a/css/outrosUsuarios.css
+++ b/css/outrosUsuarios.css
@@ -1,4 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
+:root {
+    --cor-do-cabecalho: #a2aeaf;
+    --cor-do-fundo: #a2aeaf;
+    --cor-da-letra: black;
+    --cor-fundo-container:#ecf0f1;
+    --cor-da-divisoria:black;
+    
+  }
+  
+  @media (prefers-color-scheme: dark) {
+    :root {
+
+        --cor-do-cabecalho: rgb(7, 0, 36);
+        --cor-do-fundo: rgb(7, 0, 36);
+        --cor-da-letra: white;
+        --cor-fundo-container:#323333;
+        --cor-da-divisoria:white;
+    }
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0px 0px 0px 0px;
@@ -12,17 +32,18 @@ body {
 header{
     text-align: center;
     font-family: 'Moon Dance', cursive;
-    background-color: #a2aeaf;
+    background-color: var(--cor-do-cabecalho);
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     gap: 2em;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid var(--cor-da-divisoria);     
 }
 
 #busca{
     align-self: flex-end;
     margin-bottom: 10px;
+    color: var(--cor-da-letra);
 }
 
 #lupa{
@@ -46,10 +67,11 @@ header{
     position: relative;
     left: -95px;
     cursor: pointer;
+    color: var(--cor-da-letra);
 }
 
 #perfilCabecalho{
-    border: 1px solid rgb(41, 40, 40);
+    border: 1px solid var(--cor-da-divisoria);
     min-width: 38px;
     height: 38px;
     margin: 2px;
@@ -66,6 +88,7 @@ header{
     display: grid;
     grid-template-rows: 200px auto;
     background-color: #ecf0f1;
+    background-color: var(--cor-fundo-container);
 }
 
 .perfil{
@@ -75,7 +98,8 @@ header{
     justify-content: flex-start;
     align-items: center;
     margin-top: 10px;
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid var(--cor-da-divisoria);
+   
 }
 
 #imgUsuario{
@@ -91,6 +115,7 @@ header{
     flex-wrap: wrap;
     justify-content: flex-start;
     gap: 1em;
+    background-color: var(--cor-fundo-container);
 }
 
 .post {
@@ -131,6 +156,7 @@ header{
 .perfil > label{
     font-weight: bold;
     position: static;
+    color: var(--cor-da-letra);
 
 }
 
