--- a/css/pagamentos.css
+++ b/css/pagamentos.css
@@ -5,7 +5,7 @@
   --cor-do-fundo: #a2aeaf;
   --cor-da-letra: black;
   --cor-fundo-container:#ecf0f1;
-  --cor-da-divisoria:black;
+  --cor-da-divisoria:grey;
   --cor-fundo-pag:#f8f8f8;
   
 }
