--- a/css/adicionarPost.css
+++ b/css/adicionarPost.css
@@ -4,7 +4,7 @@
     --cor-do-fundo: #a2aeaf;
     --cor-da-letra: black;
     --cor-fundo-container:#ecf0f1;
-    --cor-da-divisoria:black;
+    --cor-da-divisoria:grey;
     
   }
   
